--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,10 @@
     android:paddingBottom="24dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    >
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <Button
+        android:visibility="gone"
         android:minWidth="2dp"
         android:id="@+id/btnOpenDB"
         android:textColor="#fff"
