--- a/app/src/main/res/layout/fragment_online_reporting.xml
+++ b/app/src/main/res/layout/fragment_online_reporting.xml
@@ -19,7 +19,6 @@
                 android:layout_height="150dp"
                 android:layout_weight="0"
                 android:orientation="vertical">
-
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -51,6 +50,25 @@
                     android:textSize="19sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/online_loading_layout"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ProgressBar
+                        android:id="@+id/online_loading_progressbar"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp" />
+                    <TextView
+                        android:id="@+id/online_loading_textview"
+                        android:paddingLeft="16dp"
+                        android:text="Finding nearest fire station"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
                 <RelativeLayout
                     android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
