--- a/app/src/main/res/layout/activitiy_main_truck.xml
+++ b/app/src/main/res/layout/activitiy_main_truck.xml
@@ -20,22 +20,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <!--MAP-->
-        <RelativeLayout
+        <FrameLayout
             android:background="#dcc2a4"
             android:id="@+id/truck_tab1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageButton
-                android:id="@+id/truck_imgbtnFullScreen"
-                android:src="@drawable/ic_fulllscreen_black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
             <FrameLayout
                 android:id="@+id/truck_fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </FrameLayout>
-        </RelativeLayout>
+            <ImageButton
+                android:id="@+id/truck_imgbtnFullScreen"
+                android:src="@drawable/ic_fulllscreen_black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
         <!--REPORTS-->
         <RelativeLayout
             android:visibility="gone"
