--- a/app/src/main/res/menu/listview_popup.xml
+++ b/app/src/main/res/menu/listview_popup.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/popup_delete"
-        android:title="Delete" />
+        android:title="Remove" />
 </menu>
