--- a/app/src/main/res/layout/template_fire_report.xml
+++ b/app/src/main/res/layout/template_fire_report.xml
@@ -11,7 +11,7 @@
         android:id="@+id/report_image"
         android:layout_alignParentLeft="true"
         android:layout_width="80dp"
-        android:layout_height="100dp" />
+        android:layout_height="105dp" />
     <LinearLayout
         android:layout_toRightOf="@id/report_image"
         android:paddingLeft="8dp"
@@ -39,36 +39,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:text="Status: "
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:text="On going"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:text="Alarm Level: "
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:text="Unknown"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <Button
+            android:layout_gravity="right"
+            android:text="Show in Map"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <TextView
-            android:text="Additional Information:"
+            android:text="Details"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -95,5 +77,28 @@
                 android:layout_height="wrap_content"
                 />
         </com.ms.square.android.expandabletextview.ExpandableTextView>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:textColor="@color/colorWhite"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:text="Decline"
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <Button
+                android:textColor="@color/colorWhite"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:text="Accept"
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
