--- a/app/src/main/res/layout/fragment_truck_map.xml
+++ b/app/src/main/res/layout/fragment_truck_map.xml
@@ -17,7 +17,6 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/map_maplayout"
-
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,6 +25,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </com.google.android.gms.maps.MapView>
+    </LinearLayout>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/map_report_confirmationLayout"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:text="Decline"
+            android:textColor="@color/colorWhite"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:text="Accept"
+            android:textColor="@color/colorWhite"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </FrameLayout>
