--- a/app/src/main/res/layout/activitiy_main_truck.xml
+++ b/app/src/main/res/layout/activitiy_main_truck.xml
@@ -29,8 +29,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </FrameLayout>
-            <!--FULL SCREEN BUTTON-->
+            <!--TOP RIGHT CORNER BUTTONS-->
             <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="top|end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageButton
@@ -39,6 +41,14 @@
                     android:background="#80ffffff"
                     android:id="@+id/truck_imgbtnFullScreen"
                     android:src="@drawable/ic_fulllscreen_black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageButton
+                    android:layout_margin="8dp"
+                    android:padding="4dp"
+                    android:background="#80ffffff"
+                    android:id="@+id/truck_imgbtnShowRouteDetails"
+                    android:src="@drawable/ic_directions_black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -65,6 +75,7 @@
             android:id="@+id/truck_tab2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <!--LISTVIEW LAYOUT-->
             <LinearLayout
                 android:padding="8dp"
@@ -73,13 +84,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#a7a7a7">
-                <ListView
-                    android:id="@+id/tab2_listview_reports"
-                    android:dividerHeight="10.0sp"
-                    android:divider="@android:color/transparent"
+                <android.support.v4.widget.SwipeRefreshLayout
+                    android:id="@+id/tab2_swipeRefreshLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                </ListView>
+                    <ListView
+                        android:id="@+id/tab2_listview_reports"
+                        android:dividerHeight="10.0sp"
+                        android:divider="@android:color/transparent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    </ListView>
+                </android.support.v4.widget.SwipeRefreshLayout>
             </LinearLayout>
             <!--LOADING LAYOUT-->
             <LinearLayout
@@ -120,6 +136,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+            <!--IMAGE ZOOM LAYOUT-->
+            <FrameLayout
+                android:id="@+id/tab2_zoomlayout"
+                android:background="#eff0f2"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <com.example.rvnmrqz.firetrack.TouchImageView
+                    android:layout_centerInParent="true"
+                    android:id="@+id/truck_tab2_touchimageview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <TextView
+                    android:layout_gravity="top|right"
+                    android:id="@+id/truck_tab2_zoom_txtClose"
+                    android:text="X"
+                    android:textColor="#3e3e3f"
+                    android:shadowColor="#fff"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="2"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:padding="14dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </FrameLayout>
         </RelativeLayout>
         <!--TAB 3-->
         <RelativeLayout
