--- a/app/src/main/res/layout/activitiy_main_truck.xml
+++ b/app/src/main/res/layout/activitiy_main_truck.xml
@@ -14,10 +14,13 @@
     </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>
 
     <FrameLayout
-        android:layout_above="@id/truck_bottomnavigation"
+        android:layout_above="@+id/truck_bottomnavigation"
         android:id="@+id/truck_containter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <!--TAB 1-->
         <FrameLayout
             android:id="@+id/truck_tab1"
@@ -31,42 +34,48 @@
             </FrameLayout>
             <!--TOP RIGHT CORNER BUTTONS-->
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_gravity="top|end"
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageButton
-                    android:layout_margin="8dp"
                     android:padding="4dp"
-                    android:background="#80ffffff"
                     android:id="@+id/truck_imgbtnFullScreen"
+                    android:layout_gravity="end"
+                    android:layout_margin="8dp"
+                    android:background="#80ffffff"
                     android:src="@drawable/ic_fulllscreen_black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <ImageButton
+                <LinearLayout
+                    android:id="@+id/truck_button_extra_Layout_showDetails"
+                    android:visibility="invisible"
+                    android:layout_gravity="end"
                     android:layout_margin="8dp"
-                    android:padding="4dp"
                     android:background="#80ffffff"
-                    android:id="@+id/truck_imgbtnShowRouteDetails"
-                    android:src="@drawable/ic_directions_black"
+                    android:padding="4dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <!--LOADING LAYOUT-->
-            <LinearLayout
-                android:id="@+id/tab1_loadinglayout"
-                android:visibility="gone"
-                android:background="#80ffffff"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                    <ProgressBar
+                    android:layout_height="wrap_content">
+                    <ImageButton
+                        android:background="@android:color/transparent"
+                        android:id="@+id/truck_imgbtnShowRouteDetails"
+                        android:src="@drawable/ic_menu_black"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+                </LinearLayout>
+                <LinearLayout
+                    android:visibility="invisible"
+                    android:id="@+id/truck_routesDetailsLayout"
+                    android:background="#80000000"
+                    android:layout_width="100dp"
+                    android:layout_height="150dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
                     <TextView
-                        android:text="Loading"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:text="DETAILS" />
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
         <!--TAB 2-->
