--- a/app/src/main/res/layout/fragment_truck_map.xml
+++ b/app/src/main/res/layout/fragment_truck_map.xml
@@ -5,13 +5,17 @@
     tools:context="com.example.rvnmrqz.firetrack.Fragment_truck_map">
     <!--PROGRESS LAYOUT-->
     <LinearLayout
-        android:visibility="gone"
         android:id="@+id/truck_map_progresslayout"
         android:orientation="vertical"
         android:gravity="center"
+        android:background="#80ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:text="Loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -30,39 +34,36 @@
     <!--CONFIRMATION LAYOUT-->
     <LinearLayout
         android:id="@+id/truck_map_confirmationLayout"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_gravity="bottom"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/confirmation_declineButton"
-                android:text="Decline"
-                android:textColor="@color/colorWhite"
-                android:backgroundTint="@color/colorPrimary"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/confirmation_acceptButton"
-                android:text="Accept"
-                android:textColor="@color/colorWhite"
-                android:backgroundTint="@color/colorPrimary"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
         <Button
             android:id="@+id/confirmation_cancelButton"
+            android:layout_weight="1"
             android:text="Cancel"
             android:textColor="@color/colorWhite"
             android:backgroundTint="@color/colorPrimary"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/confirmation_declineButton"
+            android:text="Decline"
+            android:textColor="@color/colorWhite"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/confirmation_acceptButton"
+            android:text="Accept"
+            android:textColor="@color/colorWhite"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </FrameLayout>
